feat: 修改保存纹理的文件名。